--- a/asistencia/src/main/resources/application.properties
+++ b/asistencia/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # 4. MAGIA DE JPA: Esto crea las tablas automáticamente por ti
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
