--- a/asistencia/pom.xml
+++ b/asistencia/pom.xml
@@ -28,6 +28,10 @@
 	</scm>
 	<properties>
 		<java.version>17</java.version>
+		<properties>
+			<java.version>17</java.version>
+			<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		</properties>
 	</properties>
 	<dependencies>
 		<dependency>
